// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sort JSON complex custom sort should sort an unsorted JSON object 1`] = `
"{
  \\"first\\": \\"first\\",
  \\"050\\": null,
  \\"021\\": null,
  \\"001\\": null,
  \\"10a\\": null,
  \\"10B\\": null,
  \\"10c\\": null,
  \\"100\\": null,
  \\"20c\\": null,
  \\"20B\\": null,
  \\"20a\\": null,
  \\"20\\": null,
  \\"3\\": null,
  \\"a2\\": null,
  \\"a1\\": null,
  \\"b1\\": null,
  \\"b2\\": null,
  \\"c1\\": null,
  \\"C2\\": null,
  \\"c3\\": null,
  \\"d3\\": null,
  \\"D2\\": null,
  \\"d1\\": null,
  \\"e1\\": null,
  \\"e2\\": null,
  \\"exampleNestedObject\\": {
    \\"3\\": null,
    \\"20\\": null,
    \\"100\\": null,
    \\"z\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"001\\": null,
    \\"examplePrimitive\\": 1,
    \\"021\\": null,
    \\"a\\": null,
    \\"050\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON complex custom sort should validate a sorted JSON object 1`] = `
"{
  \\"first\\": \\"first\\",
  \\"050\\": null,
  \\"021\\": null,
  \\"001\\": null,
  \\"10a\\": null,
  \\"10B\\": null,
  \\"10c\\": null,
  \\"100\\": null,
  \\"20c\\": null,
  \\"20B\\": null,
  \\"20a\\": null,
  \\"20\\": null,
  \\"0\\": null,
  \\"3\\": null,
  \\"a2\\": null,
  \\"a1\\": null,
  \\"b1\\": null,
  \\"b2\\": null,
  \\"b3\\": null,
  \\"c1\\": null,
  \\"C2\\": null,
  \\"c3\\": null,
  \\"d3\\": null,
  \\"D2\\": null,
  \\"d1\\": null,
  \\"e1\\": null,
  \\"e2\\": null,
  \\"exampleNestedObject\\": {
    \\"3\\": null,
    \\"20\\": null,
    \\"100\\": null,
    \\"050\\": null,
    \\"021\\": null,
    \\"001\\": null,
    \\"z\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"a\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON numeric custom sort should sort an unsorted JSON object 1`] = `
"{
  \\"0\\": null,
  \\"3\\": null,
  \\"20\\": null,
  \\"100\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"3\\": null,
    \\"20\\": null,
    \\"100\\": null,
    \\"z\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"a\\": null
  },
  \\"first\\": \\"first\\",
  \\"z\\": null
}
"
`;

exports[`Sort JSON numeric custom sort should validate a sorted JSON object 1`] = `
"{
  \\"0\\": null,
  \\"3\\": null,
  \\"20\\": null,
  \\"100\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"3\\": null,
    \\"20\\": null,
    \\"100\\": null,
    \\"z\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"a\\": null
  },
  \\"first\\": \\"first\\",
  \\"z\\": null
}
"
`;

exports[`Sort JSON should sort JSON objects recursively within a nested array 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"a\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"z\\": null
  },
  \\"test\\": [
    null,
    {
      \\"baz\\": 3,
      \\"foo\\": \\"bar\\"
    },
    {
      \\"brz\\": 2,
      \\"foo\\": \\"bag\\"
    }
  ],
  \\"z\\": null
}
"
`;

exports[`Sort JSON should sort a JSON object with unconventional keys 1`] = `
"{
  \\"\\": null,
  \\"\\\\u0000\\": null,
  \\"\\\\b\\": null,
  \\"\\\\t\\": null,
  \\"\\\\n\\": null,
  \\"\\\\f\\": null,
  \\"\\\\r\\": null,
  \\" \\": null,
  \\"\\\\\\"\\": null,
  \\"'\\": null,
  \\"-10\\": null,
  \\"-10.1e10\\": null,
  \\"/\\": null,
  \\"0X10\\": null,
  \\"0x10\\": null,
  \\"10.101\\": null,
  \\"10.1e10\\": null,
  \\"1E10\\": null,
  \\"1e10\\": null,
  \\"[\\": null,
  \\"[1,2,3]\\": null,
  \\"[]\\": null,
  \\"\\\\\\\\\\": null,
  \\"false\\": null,
  \\"null\\": null,
  \\"true\\": null,
  \\"{\\": null,
  \\"{}\\": null,
  \\"￿\\": null
}
"
`;

exports[`Sort JSON should sort an unsorted JSON object 1`] = `
"{
  \\"$\\": null,
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"z\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"a\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should sort an unsorted JSON object recursively 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"a\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"z\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should sort an unsorted JSON object within an array recursively 1`] = `
"[
  1,
  4,
  {
    \\"0\\": null,
    \\"a\\": null,
    \\"b\\": null,
    \\"exampleNestedObject\\": {
      \\"a\\": null,
      \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
      \\"examplePrimitive\\": 1,
      \\"z\\": null
    },
    \\"z\\": null
  },
  2
]
"
`;

exports[`Sort JSON should sort an unsorted deeply nested JSON object recursively 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"a\\": null,
    \\"anotherObject\\": {
      \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
      \\"examplePrimitive\\": 1,
      \\"yetAnother\\": {
        \\"andAnother\\": {
          \\"a\\": null,
          \\"b\\": null,
          \\"z\\": null
        }
      }
    },
    \\"z\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should validate JSON objects recursively within a nested array 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"a\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"z\\": null
  },
  \\"test\\": [
    null,
    {
      \\"baz\\": 3,
      \\"foo\\": \\"bar\\"
    },
    {
      \\"brz\\": 2,
      \\"foo\\": \\"bag\\"
    }
  ],
  \\"z\\": null
}
"
`;

exports[`Sort JSON should validate a deeply nested sorted JSON object recursively 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"a\\": null,
    \\"anotherObject\\": {
      \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
      \\"examplePrimitive\\": 1,
      \\"yetAnother\\": {
        \\"andAnother\\": {
          \\"a\\": null,
          \\"b\\": null,
          \\"z\\": null
        }
      }
    },
    \\"z\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should validate a sorted JSON object 1`] = `
"{
  \\"$\\": null,
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"z\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"a\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should validate a sorted JSON object recursively 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"a\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"z\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should validate a sorted JSON object with unconventional keys 1`] = `
"{
  \\"\\": null,
  \\"\\\\u0000\\": null,
  \\"\\\\b\\": null,
  \\"\\\\t\\": null,
  \\"\\\\n\\": null,
  \\"\\\\f\\": null,
  \\"\\\\r\\": null,
  \\" \\": null,
  \\"\\\\\\"\\": null,
  \\"'\\": null,
  \\"-10\\": null,
  \\"-10.1e10\\": null,
  \\"/\\": null,
  \\"0X10\\": null,
  \\"0x10\\": null,
  \\"10.101\\": null,
  \\"10.1e10\\": null,
  \\"1E10\\": null,
  \\"1e10\\": null,
  \\"[\\": null,
  \\"[1,2,3]\\": null,
  \\"[]\\": null,
  \\"\\\\\\\\\\": null,
  \\"false\\": null,
  \\"null\\": null,
  \\"true\\": null,
  \\"{\\": null,
  \\"{}\\": null,
  \\"￿\\": null
}
"
`;

exports[`Sort JSON should validate a sorted JSON object within an array recursively 1`] = `
"[
  1,
  4,
  {
    \\"0\\": null,
    \\"a\\": null,
    \\"b\\": null,
    \\"exampleNestedObject\\": {
      \\"a\\": null,
      \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
      \\"examplePrimitive\\": 1,
      \\"z\\": null
    },
    \\"z\\": null
  },
  2
]
"
`;

exports[`Sort JSON simple custom sort should sort an unsorted JSON object 1`] = `
"{
  \\"first\\": \\"first\\",
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"z\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"a\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON simple custom sort should validate a sorted JSON object 1`] = `
"{
  \\"first\\": \\"first\\",
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"z\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"a\\": null
  },
  \\"z\\": null
}
"
`;
